--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -13,10 +13,10 @@
   <header class="navBar">
     <div class="navContainer">
       <a href="#" class="logo">Rishika</a>
-      <nav>
-        <a href="#" class="navLink">Works</a>
-        <a href="#" class="navLink">Blog</a>
-        <a href="#" class="navLink">Contact</a>
+      <nav class="navLink">
+        <a href="#" >Works</a>
+        <a href="#" >Blog</a>
+        <a href="#" >Contact</a>
       </nav>
     </div>
   </header>
@@ -34,7 +34,7 @@
       </div>
     </section>
 
-    <section class="recentPosts">
+    <!-- <section class="recentPosts">
       <div class="sectionHeader">
         <h2>Recent posts</h2>
         <a href="#">View all</a>
@@ -55,7 +55,29 @@
             Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </div>
       </div>
-    </section>
+    </section> -->
+
+
+    <section class="recentPosts">
+  <div class="sectionHeader">
+    <h2>Recent posts</h2>
+    <a href="#">View all</a>
+  </div>
+
+  <div class="postsGrid">
+    <div class="postCard">
+      <h3>Making a design system from scratch</h3>
+      <small>12 Feb 2020 &nbsp; | &nbsp; Design, Pattern</small>
+      <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+    </div>
+
+    <div class="postCard">
+      <h3>Creating pixel perfect icons in Figma</h3>
+      <small>12 Feb 2020 &nbsp; | &nbsp; Figma, Icon Design</small>
+      <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+    </div>
+  </div>
+</section>
 
     <section class="featuredWorks">
       <h2>Featured works</h2>
