--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -28,98 +28,133 @@
 
     <section class="banner">
       <div class="container innerBanner">
-            <h1>
-            Perfect Landing Page<br/>
-            Design Tutorial
-          </h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam.
-          </p>
-          </div>
-          <section class="services">
-  <div class="container innerServices">
-    <h4 class="sectionLabel">Services</h4>
-    <h2 class="sectionHeading">What we do</h2>
-    <div class="serviceCards">
-      <div class="serviceCard">">
-        <div class="serviceCardImg">
-        <img src="/images/mobile.png" alt="Mobile App Design Icon" class="serviceIcon" /></div>
-        <h3>Mobile App Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+        <h1>
+          Perfect Landing Page<br />
+          Design Tutorial
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
       </div>
-      <div class="serviceCard">
-        <div class="serviceCardImg">
-        <img src="/images/monitor.png" alt="Website Design Icon" class="serviceIcon" /></div>
-        <h3>Website Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
-      </div>
-      <div class="serviceCard">
-         <div class="serviceCardImg">
-        <img src="/images/box.png" alt="Packaging Design Icon" class="serviceIcon" /></div>
-        <h3>Packaging Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Feature Section 1 -->
-<div class="serviceFeature">
-  <div class="featureText">
-    <h5>Feature 1</h5>
-    <h2>Designed for<br />individuals</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.
-    </p>
-    <ul>
-      <li>Store and share files</li>
-      <li>Search across devices</li>
-      <li>Work with enhanced tools</li>
-    </ul>
-  </div>
-  <div class="featureImage">
-    <div class="imageFrame">
-      <img src="images/left.png" alt="Designed for individuals" />
-    </div>
-  </div>
-</div>
-
-<!-- Feature Section 2 (Reversed) -->
-<div class="serviceFeature reverse">
-  <div class="featureText">
-    <h5>Feature 2</h5>
-    <h2>Designed for big and small business</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.
-    </p>
-    <ul>
-      <li>Store and share files</li>
-      <li>Boost collaboration</li>
-      <li>Work from anywhere</li>
-    </ul>
-  </div>
-  <div class="featureImage">
-    <div class="imageFrame">
-      <img src="/images/right.png" alt="Designed for business" />
-    </div>
-  </div>
-</div>
-
-<footer class="footer">
-  <div class="container footerContent">
-    <a href="#" class="logo">Crop.</a>
-    <div class="footerLinks">
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">Features</a>
-      <a href="#">Testimonials</a>
-      <a href="#">Contact</a>
-    </div>
-  </div>
-</footer>
-      
     </section>
+
+    <section class="services">
+      <div class="container innerServices">
+        <h4 class="sectionLabel">Services</h4>
+        <h2 class="sectionHeading">What we do</h2>
+
+        <div class="serviceCards">
+          <div class="serviceCard">
+            <div class="serviceCardImg">
+              <img
+                src="/images/mobile.png"
+                alt="Mobile App Design Icon"
+                class="serviceIcon"
+              />
+            </div>
+
+            <h3>Mobile App Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+          </div>
+
+          <div class="serviceCard">
+            <div class="serviceCardImg">
+              <img
+                src="/images/monitor.png"
+                alt="Website Design Icon"
+                class="serviceIcon"
+              />
+            </div>
+            <h3>Website Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+          </div>
+
+          <div class="serviceCard">
+            <div class="serviceCardImg">
+              <img
+                src="/images/box.png"
+                alt="Packaging Design Icon"
+                class="serviceIcon"
+              />
+            </div>
+            <h3>Packaging Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="featureSection">
+      <div class="container">
+        <div class="featureSection">
+          <!-- Feature Section 1 -->
+          <div class="serviceFeature">
+            <div class="featureText">
+              <h5>Feature 1</h5>
+              <h2>Designed for<br />individuals</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt.
+              </p>
+              <ul>
+                <li>Store and share files</li>
+                <li>Search across devices</li>
+                <li>Work with enhanced tools</li>
+              </ul>
+            </div>
+            <div class="featureImage">
+              <div class="imageFrame">
+                <img src="images/left.png" alt="Designed for individuals" />
+              </div>
+            </div>
+          </div>
+          <!-- Feature Section 2 (Reversed) -->
+          <div class="serviceFeature reverse">
+            <div class="featureText">
+              <h5>Feature 2</h5>
+              <h2>Designed for big and small business</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt.
+              </p>
+              <ul>
+                <li>Store and share files</li>
+                <li>Boost collaboration</li>
+                <li>Work from anywhere</li>
+              </ul>
+            </div>
+            <div class="featureImage">
+              <div class="imageFrame">
+                <img src="/images/right.png" alt="Designed for business" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container footerContent">
+        <a href="#" class="logo">Crop.</a>
+        <div class="footerLinks">
+          <a href="#">Home</a>
+          <a href="#">Services</a>
+          <a href="#">Features</a>
+          <a href="#">Testimonials</a>
+          <a href="#">Contact</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
