--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -17,7 +17,7 @@
       <div class="navMain">
         <a href="#" class="logo">Crop.</a>
         <nav class="navLink">
-          <a href="#">Home</a>
+          <a href="#" class="active">Home</a>
           <a href="#">Services</a>
           <a href="#">Features</a>
           <a href="#">Testimonials</a>
@@ -37,6 +37,10 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
+        <div class="bannerBtn">
+          <img src="images/bannerBtn.png" alt="Btn">
+
+        </div>
       </div>
     </section>
 
@@ -146,7 +150,9 @@
 
     <footer class="footer">
       <div class="container footerContent">
-        <a href="#" class="logo">Crop.</a>
+        <div class="footerImg">
+          <img src="images/cropfooter.png">
+        </div>
         <div class="footerLinks">
           <a href="#">Home</a>
           <a href="#">Services</a>
@@ -154,6 +160,7 @@
           <a href="#">Testimonials</a>
           <a href="#">Contact</a>
         </div>
+        <p>Copyright © 2023 Destiny Inc. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
