--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -103,10 +103,11 @@
       <div class="container">
         <div class="featureSection">
           <!-- Feature Section 1 -->
+
           <div class="serviceFeature">
             <div class="featureText">
               <h5>Feature 1</h5>
-              <h2>Designed for<br />individuals</h2>
+              <h2>Designed for individuals</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
                 eiusmod tempor incididunt.
@@ -118,7 +119,7 @@
               </ul>
             </div>
             <div class="featureImage">
-              <div class="imageFrame">
+              <div class="imageFrameLeft">
                 <img src="images/left.png" alt="Designed for individuals" />
               </div>
             </div>
@@ -139,7 +140,7 @@
               </ul>
             </div>
             <div class="featureImage">
-              <div class="imageFrame">
+              <div class="imageFrameRight">
                 <img src="/images/right.png" alt="Designed for business" />
               </div>
             </div>
