--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -163,51 +163,53 @@
     <div class="cInfo">
     <h5>Company Info</h5>
     <ul>
-      <li><a href="">About us </a></li>
-      <li>Career</li>
-      <li>We are hiring</li>
-      <li>Blog</li>
+      <li><a href="#">About us </a></li>
+      <li><a href="#">Career</a></li>      
+      <li><a href="#">We are hiring</a></li>
+      <li><a href="#">Blog</a></li>
     </ul>
     </div>
 
     <div class="cInfo">
     <h5>Legal</h5>
     <ul>
-      <li>About us</li>
-      <li>Career</li>
-      <li>We are hiring</li>
-      <li>Blog</li>
+      <li><a href="#">About us </a></li>
+      <li><a href="#">Career</a></li>      
+      <li><a href="#">We are hiring</a></li>
+      <li><a href="#">Blog</a></li>
     </ul>
     </div>
 
     <div class="cInfo">
     <h5>Features</h5>
     <ul>
-      <li>About us</li>
-      <li>Career</li>
-      <li>We are hiring</li>
-      <li>Blog</li>
+      <li><a href="#">Business Marketing</a></li>
+      <li><a href="#">User Analytic</a></li>      
+      <li><a href="#">Live Chat</a></li>
+      <li><a href="#">Unlimited Support</a></li>
     </ul>
     </div> 
 
     <div class="cInfo">
     <h5>Resources</h5>
     <ul>
-      <li>About us</li>
-      <li>Career</li>
-      <li>We are hiring</li>
-      <li>Blog</li>
+      <li><a href="#">IOS & Android </a></li>
+      <li><a href="#">Watch a Demo</a></li>
+      <li><a href="#">Customers</a></li>
+      <li><a href="#">API</a></li>      
+
     </ul>
     </div> 
   
     <div class="cInfo">
     <h5>Get in Touch</h5>
+    <div class="getInTouch">
     <ul>
-      <li>About us</li>
-      <li>Career</li>
-      <li>We are hiring</li>
-      <li>Blog</li>
+      <li><a href="#">(480) 555-0103</a></li>
+      <li><a href="#">4517 Washington Ave.</a></li>      
+      <li><a href="#">debra.holt@example.com</a></li>
     </ul>
+    </div>
     </div>    
   </div>
   </div>
