--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -35,7 +35,7 @@
             <p>We know how large objects will act, but things on a small scale.</p>
             <div class="bannerBtn">
                 <a href="#" class="active">Get Quote Now</a>
-                <a href="#">Learn More</a>
+                <a href="#" class="learnMore">Learn More</a>
             </div>
         </div>
     </section>
@@ -86,6 +86,9 @@
             <div class="testimonialText">
 
               <div class="designer1">
+                <div class="designerImage"> 
+                  <img src="Images/circleImg1.png">
+                </div>
               <h3>Regina Miles</h3>
               <h6>Designer</h6>
               <img  src="Images/stars.png" alt="starsImg">
@@ -95,6 +98,9 @@
               Einstein developed a new view of time first and then space.</p>
               </div>
               <div class="designer1">
+                <div class="designerImage"> 
+                  <img src="Images/circleImg2.png">
+                </div>
               <h3>Regina Miles</h3>
               <h6>Designer</h6>
               <img  src="Images/stars.png" alt="starsImg">
