--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Assignment 2</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Heebo:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="CSS/style.css" />
-</head>
-<body>
-  <header class="navBar">
-    <div class="navContainer">
-      <a href="#" class="logo">Rishika</a>
-      <nav class="navLink">
-        <a href="#" >Works</a>
-        <a href="#" >Blog</a>
-        <a href="#" >Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="mainContainer">
-    <section class="introSection">
-      <div class="introText">
-        <h1>Hi, I am John,<br/>Creative Technologist</h1>
-        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet<br> sint. Velit officia consequat duis enim velit mollit. Exercitation veniam <br>
-            consequat sunt nostrud amet.</p>
-        <a href="#" class="downloadBtn">Download Resume</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment 2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Heebo:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
+    <header class="navBar">
+      <div class="navContainer">
+        <a href="#" class="logo">Rishika</a>
+        <nav class="navLink">
+          <a href="#">Works</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
       </div>
-      <div class="introImage">
-        <img src="Images/MainImage.png" alt="Profile Photo" />
-      </div>
-    </section>
+    </header>
 
-    <!-- <section class="recentPosts">
+    <main class="mainContainer">
+      <section class="introSection">
+        <div class="introText">
+          <h1>Hi, I am John,<br />Creative Technologist</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+            amet<br />
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam <br />
+            consequat sunt nostrud amet.
+          </p>
+          <a href="#" class="downloadBtn">Download Resume</a>
+        </div>
+        <div class="introImage">
+          <img src="Images/MainImage.png" alt="Profile Photo" />
+        </div>
+      </section>
+      <!-- </main> -->
+
+      <!-- <section class="recentPosts">
       <div class="sectionHeader">
         <h2>Recent posts</h2>
         <a href="#">View all</a>
@@ -57,71 +66,95 @@
       </div>
     </section> -->
 
+      <section class="recentPosts">
+        <div class="sectionHeader">
+          <h2>Recent posts</h2>
+          <a href="#">View all</a>
+          </div>
 
-    <section class="recentPosts">
-  <div class="sectionHeader">
-    <h2>Recent posts</h2>
-    <a href="#">View all</a>
-  </div>
+          <div class="postsGrid">
+            <div class="postCard">
+              <h3>Making a design system from scratch</h3>
+              <small>12 Feb 2020 &nbsp; | &nbsp; Design, Pattern</small>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
 
-  <div class="postsGrid">
-    <div class="postCard">
-      <h3>Making a design system from scratch</h3>
-      <small>12 Feb 2020 &nbsp; | &nbsp; Design, Pattern</small>
-      <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-    </div>
-
-    <div class="postCard">
-      <h3>Creating pixel perfect icons in Figma</h3>
-      <small>12 Feb 2020 &nbsp; | &nbsp; Figma, Icon Design</small>
-      <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-    </div>
-  </div>
-</section>
-
-    <section class="featuredWorks">
-      <h2>Featured works</h2>
-
-      <a href="#" class="workItem">
-        <img src="Images/Rectangle 30.png" alt="Designing Dashboards" />
-        <div class="workContent">
-          <h3>Designing Dashboards</h3>
-          <div class="workMeta"><span class="workYear">2020</span> Dashboard</div>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-          Exercitation veniam consequat sunt nostrud amet.</p>
+            <div class="postCard">
+              <h3>Creating pixel perfect icons in Figma</h3>
+              <small>12 Feb 2020 &nbsp; | &nbsp; Figma, Icon Design</small>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
+            </div>
+          </div>
         </div>
-      </a>
+      </section>
 
-      <a href="#" class="workItem">
-        <img src="Images/Rectangle 32.png" alt="Vibrant Portraits" />
-        <div class="workContent">
-          <h3>Vibrant Portraits of 2020</h3>
-          <div class="workMeta"><span class="workYear">2018</span> Illustration</div>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-             Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-      </a>
+      <section class="featuredWorks">
+        <h2>Featured works</h2>
 
-      <a href="#" class="workItem">
-        <img src="Images/Rectangle 34.png" alt="Malayalam Typography" />
-        <div class="workContent">
-          <h3>36 Days of Malayalam type</h3>
-          <div class="workMeta"><span class="workYear">2018</span> Typography</div>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-             Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-      </a>
-    </section>
-  </main>
+        <a href="#" class="workItem">
+          <img src="Images/Rectangle 30.png" alt="Designing Dashboards" />
+          <div class="workContent">
+            <h3>Designing Dashboards</h3>
+            <div class="workMeta">
+              <span class="workYear">2020</span> Dashboard
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </a>
 
-  <footer class="footer">
-    <div class="footerIcons">
-      <a href="#"><img src="Images/fb.png" alt="Facebook" /></a>
-      <a href="#"><img src="Images/insta.png" alt="Instagram" /></a>
-      <a href="#"><img src="Images/Group.png" alt="Twitter" /></a>
-      <a href="#"><img src="Images/Linkedin.png" alt="LinkedIn" /></a>
-    </div>
-    <small>Copyright ©2020 All rights reserved</small>
-  </footer>
-</body>
+        <a href="#" class="workItem">
+          <img src="Images/Rectangle 32.png" alt="Vibrant Portraits" />
+          <div class="workContent">
+            <h3>Vibrant Portraits of 2020</h3>
+            <div class="workMeta">
+              <span class="workYear">2018</span> Illustration
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </a>
+
+        <a href="#" class="workItem">
+          <img src="Images/Rectangle 34.png" alt="Malayalam Typography" />
+          <div class="workContent">
+            <h3>36 Days of Malayalam type</h3>
+            <div class="workMeta">
+              <span class="workYear">2018</span> Typography
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </a>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footerIcons">
+        <a href="#"><img src="Images/fb.png" alt="Facebook" /></a>
+        <a href="#"><img src="Images/insta.png" alt="Instagram" /></a>
+        <a href="#"><img src="Images/Group.png" alt="Twitter" /></a>
+        <a href="#"><img src="Images/Linkedin.png" alt="LinkedIn" /></a>
+      </div>
+      <small>Copyright ©2020 All rights reserved</small>
+    </footer>
+  </body>
 </html>
