--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -46,7 +46,7 @@
 
     <section class="services">
       <div class="container innerServices">
-        <h4 class="sectionLabel">Services</h4>
+        <h4 class="sectionLabel">SERVICES</h4>
         <h2 class="sectionHeading">What we do</h2>
 
         <div class="serviceCards">
