--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
 
-        <div class="right">
+         <div class="right">
           <nav class="navLink">
             <a href="#">Home</a>
             <a href="#">Services</a>
@@ -36,6 +36,29 @@
             <a href="#" class="active">Become a member</a>
           </div>
         </div>
+        
+<!-- <div class="right"> -->
+  <!-- <div class="hamburger" onclick="toggleMenu()">☰</div> -->
+
+  <!-- Menu (shown on desktop and toggled on mobile) -->
+  <!-- <div class="navMenu" id="navMenu">
+    <nav class="navLink">
+      <a href="#">Home</a>
+      <a href="#">Services</a>
+      <a href="#">Features</a>
+      <a href="#">Testimonials</a>
+      <a href="#">Contact</a>
+    </nav>
+
+    <div class="navBtn">
+      <a href="#">Login</a>
+      <a href="#" class="active">Become a member</a>
+    </div>
+  </div>
+</div> -->
+
+
+
       </div>
     </header>
     <section class="banner">
