--- a/Assignment-7/index.html
+++ b/Assignment-7/index.html
@@ -180,7 +180,7 @@
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="team-card text-center">
+                    <div class="team-card ">
                         <div class="team-img mx-auto mb-3">
                             <img src="./images/talent1.png" alt="Peg Legge" />
                         </div>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="team-card text-center">
+                    <div class="team-card">
                         <div class="team-img mx-auto mb-3">
                             <img src="./images/talent2.png" alt="Richard Guerra" />
                         </div>
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="team-card text-center">
+                    <div class="team-card">
                         <div class="team-img mx-auto mb-3">
                             <img src="./images/talent3.png" alt="Alexandra Stolz" />
                         </div>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="team-card text-center">
+                    <div class="team-card ">
                         <div class="team-img mx-auto mb-3">
                             <img src="./images/talent4.png" alt="Janet Bray" />
                         </div>
