--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -16,11 +16,13 @@
     <header class="navBar">
       <div class="navHeader">
         <a href="#" class="logo">Rishika</a>
-        <nav class="navLink">
-          <a href="#">Works</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-        </nav>
+        <div class="navLink">
+          <ul>
+          <li><a href="#">Works</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -43,7 +45,7 @@
           <img src="images/MainImage.png" alt="Profile Photo" />
         </div>
         </div>
-        
+
       </section>
       <section class="recentPosts">
         <div class="container">
@@ -89,7 +91,7 @@
           <div class="workContent">
             <h4>Designing Dashboards</h4>
             <div class="workMeta">
-              <span class="workYear">2020</span> Dashboard
+              <span class="workYear">2020</span> <span>Dashboard</span>
             </div>
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -104,7 +106,7 @@
           <div class="workContent">
             <h4>Vibrant Portraits of 2020</h4>
             <div class="workMeta">
-              <span class="workYear">2018</span> Illustration
+              <span class="workYear">2018</span> <sp>Illustration</sp>
             </div>
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -119,7 +121,7 @@
           <div class="workContent">
             <h4>36 Days of Malayalam type</h4>
             <div class="workMeta">
-              <span class="workYear">2018</span> Typography
+              <span class="workYear">2018</span> <span class="workText">Typography</span>
             </div>
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do
